@@ -83,34 +83,6 @@ name|org
 operator|.
 name|apache
 operator|.
-name|commons
-operator|.
-name|logging
-operator|.
-name|Log
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|commons
-operator|.
-name|logging
-operator|.
-name|LogFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
 name|hadoop
 operator|.
 name|fs
@@ -375,9 +347,11 @@ name|org
 operator|.
 name|apache
 operator|.
-name|log4j
+name|commons
 operator|.
-name|Level
+name|logging
+operator|.
+name|Log
 import|;
 end_import
 
@@ -387,9 +361,11 @@ name|org
 operator|.
 name|apache
 operator|.
-name|log4j
+name|commons
 operator|.
-name|Logger
+name|logging
+operator|.
+name|LogFactory
 import|;
 end_import
 
@@ -626,21 +602,6 @@ name|HColumnDescriptor
 argument_list|(
 name|OUTPUT_COLUMN
 argument_list|)
-argument_list|)
-expr_stmt|;
-comment|// Enable DEBUG-level MR logging.
-name|Logger
-operator|.
-name|getLogger
-argument_list|(
-literal|"org.apache.hadoop.mapred"
-argument_list|)
-operator|.
-name|setLevel
-argument_list|(
-name|Level
-operator|.
-name|DEBUG
 argument_list|)
 expr_stmt|;
 block|}
