@@ -71,63 +71,11 @@ name|org
 operator|.
 name|apache
 operator|.
-name|log4j
-operator|.
-name|Level
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|log4j
-operator|.
-name|Logger
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|HStoreKey
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
 name|hadoop
 operator|.
 name|hbase
 operator|.
 name|HBaseClusterTestCase
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|HConstants
 import|;
 end_import
 
@@ -155,7 +103,7 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
-name|HTableDescriptor
+name|HConstants
 import|;
 end_import
 
@@ -169,7 +117,21 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
-name|NotServingRegionException
+name|HStoreKey
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HTableDescriptor
 import|;
 end_import
 
@@ -246,11 +208,6 @@ name|TestSplit
 extends|extends
 name|HBaseClusterTestCase
 block|{
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"hiding"
-argument_list|)
 specifier|static
 specifier|final
 name|Log
@@ -343,41 +300,6 @@ argument_list|,
 literal|1024
 operator|*
 literal|128
-argument_list|)
-expr_stmt|;
-name|Logger
-operator|.
-name|getRootLogger
-argument_list|()
-operator|.
-name|setLevel
-argument_list|(
-name|Level
-operator|.
-name|WARN
-argument_list|)
-expr_stmt|;
-name|Logger
-operator|.
-name|getLogger
-argument_list|(
-name|this
-operator|.
-name|getClass
-argument_list|()
-operator|.
-name|getPackage
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-operator|.
-name|setLevel
-argument_list|(
-name|Level
-operator|.
-name|DEBUG
 argument_list|)
 expr_stmt|;
 block|}
